...
            playStopButton.backgroundColor = UIColor.clear
            
            playStopButton.removeTarget(self, action: #selector(PTHomeViewController.startDidTouch), for: .touchUpInside)
            playStopButton.addTarget(self, action: #selector(PTHomeViewController.stopDidTouch), for: .touchUpInside)
            
        } else {
            playStopButton.setTitle("PLAY", for: .normal)
            playStopButton.borderWidth = 0
            playStopButton.borderColor = UIColor.clear
            playStopButton.setTitleColor(UIColor.firstColor, for: .normal)
            playStopButton.backgroundColor = UIColor.secondColor
            
            playStopButton.removeTarget(self, action: #selector(PTHomeViewController.stopDidTouch), for: .touchUpInside)
...
